feat: listar el menu de la semana

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,6 +17,7 @@
         </ul>
         <p><b>Preparación:</b></p>
         <p class="text-dark">{{ preparacion }}</p>
+        <div class="text-center"><a href="/week">Ver toda la semana</a></div>
     </div>
     
 </div>
