--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>{% block title %}foodplan{% endblock %}</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
 <style>
 body {
     background-color:  #fdebd0  ;
@@ -29,7 +30,7 @@ body {
 
         </div> #}
         <div class="d-flex flex-column align-items-center">
-            <h1 class="text-warning mb-2">foodplan</h1>
+            <h1><a class="text-warning mb-2 text-decoration-none" href="/">foodplan</a></h1>
             {% block content %}
             {% endblock %}
         </div>
@@ -37,6 +38,9 @@ body {
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@2.2.0/dist/iconify-icon.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+</body>
 </body>
 </html>
 
