--- a/app/templates/week.html
+++ b/app/templates/week.html
@@ -25,7 +25,7 @@
         </div>
         <div class="col-md-8">
             <div class="card-body">
-                <h5 class="card-title">{{ dia.dia }}</h5>
+                <h5 class="card-title text-success">{{ dia.dia }}</h5>
                 <div class="d-flex align-items-center justify-content-between">
                   <p class="card-text flex-grow-1 mb-0">
                       {{ dia.plato_nombre }} y ensalada de {{ dia.ensalada_nombre }}
