--- a/app/templates/week.html
+++ b/app/templates/week.html
@@ -17,40 +17,42 @@
 }
 
 </style>
-{% for dia in dias_data %}
-<div class="card mb-3" style="max-width: 540px;">
-    <div class="row g-0">
-        <div id="imagen{{ loop.index }}" class="col-md-4">
-            <img src="{{ url_for('static', filename=dia.plato_imagen) }}" class="img-fluid rounded-start" alt="{{ dia.plato_nombre }}">
-        </div>
-        <div class="col-md-8">
-            <div class="card-body">
-                <h5 class="card-title text-success">{{ dia.dia }}</h5>
-                <div class="d-flex align-items-center justify-content-between">
-                  <p class="card-text flex-grow-1 mb-0">
-                      {{ dia.plato_nombre }} y ensalada de {{ dia.ensalada_nombre }}
-                  </p>
-                  <button class="btn btn-success detalles-btn ms-2" data-target="#detalles{{ loop.index }}" data-imagen="#imagen{{ loop.index }}">
-                    Detalles
-                  </button>
-              </div>
-              <div class="detalles-content" id="detalles{{ loop.index }}">
-                  <div class="mt-4">
-                      <h6>Ingredientes:</h6>
-                      <ul>
-                          {% for ingrediente in dia.plato_ingredientes %}
-                          <li>{{ ingrediente }}</li>
-                          {% endfor %}
-                      </ul>
-                      <h6>Preparación:</h6>
-                      <p>{{ dia.plato_preparacion }}</p>
+<div class="mt-3">
+    {% for dia in dias_data %}
+    <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+            <div id="imagen{{ loop.index }}" class="col-md-4">
+                <img src="{{ url_for('static', filename=dia.plato_imagen) }}" class="img-fluid rounded-start" alt="{{ dia.plato_nombre }}">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title text-success">{{ dia.dia }} {{ dia.fecha }}</h5>
+                    <div class="d-flex align-items-center justify-content-between">
+                      <p class="card-text flex-grow-1 mb-0">
+                          {{ dia.plato_nombre }} y ensalada de {{ dia.ensalada_nombre }}
+                      </p>
+                      <button class="btn btn-success detalles-btn ms-2" data-target="#detalles{{ loop.index }}" data-imagen="#imagen{{ loop.index }}">
+                        Detalles
+                      </button>
                   </div>
-              </div>
+                  <div class="detalles-content" id="detalles{{ loop.index }}">
+                      <div class="mt-4">
+                          <h6>Ingredientes:</h6>
+                          <ul>
+                              {% for ingrediente in dia.plato_ingredientes %}
+                              <li>{{ ingrediente }}</li>
+                              {% endfor %}
+                          </ul>
+                          <h6>Preparación:</h6>
+                          <p>{{ dia.plato_preparacion }}</p>
+                      </div>
+                  </div>
+                </div>
             </div>
         </div>
     </div>
+    {% endfor %}
 </div>
-{% endfor %}
 
 <script>
   document.addEventListener('DOMContentLoaded', function () {
