--- a/app/templates/week.html
+++ b/app/templates/week.html
@@ -40,7 +40,7 @@
                           <h6>Ingredientes:</h6>
                           <ul>
                               {% for ingrediente in dia.plato_ingredientes %}
-                              <li>{{ ingrediente }}</li>
+                              <li>{{ ingrediente.cantidad }} {{ ingrediente.unidad }} de {{ ingrediente.nombre }}</li>
                               {% endfor %}
                           </ul>
                           <h6>Preparación:</h6>
