fix: iteración de ingredientes en index

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,7 +22,7 @@
                         <h6>Ingredientes:</h6>
                         <ul>
                             {% for ingrediente in ingredientes %}
-                            <li>{{ ingrediente }}</li>
+                            <li>{{ ingrediente.cantidad }} {{ ingrediente.unidad }} de {{ ingrediente.nombre }}</li>
                             {% endfor %}
                         </ul>
                         <h6>Preparación:</h6>
