feat: calcula y lista ingredientes totales para la semana

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -37,6 +37,14 @@ body {
   font-weight: 700;
   font-style: italic;
 }
+.detalles-content {
+    height: 0;
+    overflow: hidden;
+    transition: height 0.4s ease;
+}
+.detalles-content.show {
+    height: auto;
+}
 
 </style>
 </head>
