--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -52,6 +52,11 @@ body {
     <div class="container my-4">
         <div class="d-flex flex-column align-items-center">
             <h1><a class="text-warning mb-2 text-decoration-none andika-regular-italic" href="/">foodplan</a></h1>
+            <div class="d-flex gap-4 my-3">
+              <a class="text-decoration-none text-secondary" href="/"><b>Home</b></a>
+              <a class="text-decoration-none text-secondary" href="/week"><b>Menú semanal</b></a>
+              <a class="text-decoration-none text-secondary" href="/ingredients"><b>Total ingredientes</b></a>
+            </div>
             {% block content %}
             {% endblock %}
         </div>
