feat: sistema para subir imágenes al servidor

--- a/app/templates/new_plate.html
+++ b/app/templates/new_plate.html
@@ -6,6 +6,20 @@
 
 <div class="card my-3 py-2 px-2" style="max-width: 540px; width: 350px;">
     <h5 class="text-success mb-3">Nuevo Plato</h5>
+    <label for="plato_nombre">Subir imagen:</label>
+    <form action="/upload" method="POST" enctype="multipart/form-data">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                    <div class="alert alert-{{ category }}">{{ message }}</div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+        <div class="d-flex gap-1 mb-2">
+            <input class="form-control" type="file" name="file">
+            <button class="btn btn-primary" type="submit">Subir</button>
+        </div>
+    </form>
     <form action="/new_plate" method="POST">
         <div id="ingredientes-container">
             <div class="ingrediente-form">
@@ -16,14 +30,15 @@
                     </div>
                     <div>
                         <label for="preparacion">Preparación:</label>
-                        <textarea class="form-control" name="preparacion" id="preparacion" style="min-height: 200px;"></textarea>
+                        <textarea class="form-control" name="preparacion" id="preparacion"
+                            style="min-height: 200px;"></textarea>
                     </div>
                     <div>
                         <label for="carbohidratos">¿Principalmente carbohidratos?:</label>
                         <select class="form-control" name="carbohidratos" id="carbohidratos" required>
                             <option value="false">No</option>
                             <option value="true">Si</option>
-                            
+
                         </select>
                     </div>
                 </div>
@@ -37,50 +52,5 @@
         </div>
     </form>
 </div>
-<script>
-    function agregarIngrediente() {
-        const container = document.getElementById("ingredientes-container")
-        const nuevoIngrediente = document.createElement("div")
-        nuevoIngrediente.classList.add("ingrediente-form")
-
-        nuevoIngrediente.innerHTML = `
-            <div class="ingrediente-form">
-                <div class="d-flex mt-1 justify-content-between gap-1">
-                    <div>
-                        <select class="form-control" name="ingrediente_id" id="ingrediente_id" required>
-                            <option value="">Seleccionar...</option>
-                            {% for ingrediente in ingredientes %}
-                            <option value="{{ ingrediente.id }}">{{ ingrediente.nombre }}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                    <div>
-                        <select class="form-control" name="ingrediente_cantidad" required>
-                            <option value="">Seleccionar...</option>
-                            {% for i in range(1, 10) %}
-                            <option value="{{ i }}">{{ i }}</option>
-                            {% endfor %}
-                            {% for i in range(10, 101, 10) %}
-                            <option value="{{ i }}">{{ i }}</option>
-                            {% endfor %}
-                            {% for i in range(150, 751, 50) %}
-                            <option value="{{ i }}">{{ i }}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                    <div>
-                        <select class="form-control" name="ingrediente_unidad" id="ingrediente_unidad" required>
-                            <option value="">Seleccionar...</option>
-                            {% for unidad in unidades%}
-                            <option value="{{ unidad.id }}">{{ unidad.unidad }}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                </div>
-            </div>
-        `
-        container.appendChild(nuevoIngrediente)
-    }
-</script>
 
 {% endblock %}
