feat: edición de ingredientes

--- a/app/templates/add_ingredients.html
+++ b/app/templates/add_ingredients.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}foodplan{% endblock %}
+{% block title %}Añadir ingredientes{% endblock %}
 
 {% block content %}
 
