--- a/app/templates/change_combination.html
+++ b/app/templates/change_combination.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}foodplan{% endblock %}
+{% block title %}Cambiar combinación{% endblock %}
 
 {% block content %}
 
