--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Passkeeper{% endblock %}
+{% block title %}Login{% endblock %}
 
 {% block content %}
 <h1>Log in</h1>
