--- a/app/templates/new_plate.html
+++ b/app/templates/new_plate.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}foodplan{% endblock %}
+{% block title %}Nuevo Plato{% endblock %}
 
 {% block content %}
 
