--- a/app/templates/total_ingredients.html
+++ b/app/templates/total_ingredients.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}foodplan{% endblock %}
+{% block title %}Ingredientes totales{% endblock %}
 
 {% block content %}
 <style>
